--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ config/database.yml
 
 # Ignore EngineYard config file
 /config/ey.yml
+/config/redis.yml
 
 # Ignore Engine Yard recipes
 /cookbooks
