--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,17 @@ machine:
     version: 1.9.3-p547
   services:
     - elasticsearch
+
+dependencies:
+  override:
+    - 'rvm-exec 2.1.5 bundle install'
+    - 'rvm-exec 2.2.2 bundle install'
+
+test:
+  override:
+    - 'rvm-exec 2.1.5 bundle exec rake'
+    - 'rvm-exec 2.2.2 bundle exec rake'
+
 deployment:
   staging:
     branch: master
