--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -200,6 +200,7 @@ development:
   # NOTE: There is substantial overhead when running in developer mode.
   # Do not use for production or load testing.
   developer_mode: true
+  rules.ignore_url_regexes: ["^/assets", "^/fonts/", "^/favicon"]
 
   # Enable textmate links
   # textmate: true
