--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -42,13 +42,15 @@ common: &default_settings
   #       - Ajax Service
   #       - All Services
   #
-  app_name: Fame Website;My Application
+  # TODO - Rename to "Fame Website"
+  app_name: My Application
 
   # When "true", the agent collects performance data about your
   # application and reports this data to the New Relic service at
   # newrelic.com. This global switch is normally overridden for each
   # environment below. (formerly called 'enabled')
-  monitor_mode: true
+  # NOTE: GB 2015.06.25 - Disabling by default to avoid hitting live NR when not needed.
+  monitor_mode: false
 
   # Developer mode should be off in every environment but
   # development as it has very high overhead in memory.
@@ -193,6 +195,7 @@ development:
   # NOTE: for initial evaluation purposes, you may want to temporarily
   # turn the agent on in development mode.
   monitor_mode: false
+  app_name: FameWebsite-DEV
 
   # Rails Only - when running in Developer Mode, the New Relic Agent will
   # present performance information on the last 100 transactions you have
@@ -210,6 +213,7 @@ test:
   # It almost never makes sense to turn on the agent when running
   # unit, functional or integration tests or the like.
   monitor_mode: false
+  app_name: FameWebsite-TEST
 
 # Turn on the agent in production for 24x7 monitoring. NewRelic
 # testing shows an average performance impact of < 5 ms per
@@ -225,4 +229,4 @@ production:
 staging:
   <<: *default_settings
   monitor_mode: false
-  # app_name: My Application (Staging)
+  app_name: FameWebsite-STAGING
