--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -2,6 +2,12 @@
 production:
   hosts:
     localhost:9200
+preproduction:
+  hosts:
+    localhost:9200
+staging:
+  hosts:
+    localhost:9200
 development:
   hosts:
     localhost:9200
