--- a/config/ey.yml
+++ b/config/ey.yml
@@ -26,7 +26,7 @@ environments:
   production_new:
     migrate: true
     migration_command: rake db:migrate
-    branch: production
+    branch: stable
     precompile_assets: true
     maintenance_on_migrate: false
   preprod:
